Added small tuple information

--- a/Week 1/Monday/Data_Storage_code.ipynb
+++ b/Week 1/Monday/Data_Storage_code.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "Sequences - basic type of structure to group data. <br>\n",
     "\n",
-    "The most important are **lists**! (**sets** and **tuples** also fall into this category)\n",
+    "The most important are **lists**! (**tuples** also fall into this category)\n",
     "\n",
     "\n",
     "\n",
@@ -93,7 +93,8 @@
     "\n",
     "\n",
     "- Create a list with square brackets \"[]\"\n",
-    "\n"
+    "\n",
+    "- Create a tuple with parentheses  \"()\"\n"
    ]
   },
   {
