edited point pattern

--- a/Week 2/Wednesday/Point Pattern.ipynb
+++ b/Week 2/Wednesday/Point Pattern.ipynb
@@ -1,6 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Point pattern analysis\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Spatial autocorrelation is just one spatial structure that can be tested. Another spatial hypothesis test falls within the domain of point pattern analysis. Point pattern analysis centers around the patterns present within point data instead of the attributes associated with the point data."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Studying the patterns present in point data is very common in the study of infectious diseases. As we discussed at the start of this section with respect to first- and second-order spatial effects, diseases are often clustered together around infected individuals or other infectious origins. One of the earliest uses of maps to identify the origin of an infectious disease was Dr. John Snow’s famous cholera map. While Dr. Snow didn’t have the statistics or technology that we have today, he was able to use maps and spatial data to identify that the infection originated from contaminated drinking wells in London. If you’re unfamiliar with Dr. Snow’s work, you can visit this resource from the Royal College of Surgeons of England: https://www.rcseng.ac.uk/library-and-publications/library/blog/mapping-disease-john-snow-and-cholera/.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Today, we have more sophisticated measures and technology to understand the patterns that are present in our data. With these measures, you will often focus on the degree of aggregation in the point data, as measured in terms of dispersion and clustering."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3dc795a9",
@@ -36,7 +72,7 @@
    "outputs": [],
    "source": [
     "### Reading in the data\n",
-    "data_path = r'YOUR FILE PATH'"
+    "data_path = \"/etc/skel/data-pt1/\""
    ]
   },
   {
@@ -108,6 +144,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "##  Ripley’s alphabet functions\n",
+    "\n",
+    "There are many statistics for measuring the pattern or lack thereof in point data. Most of these statistics are within Ripley’s alphabet of functions. In this section, we’ll cover Ripley’s G and Ripley’s K. There are many other statistics that are within Ripley’s alphabet functions that are not covered in this text. For more information on them, we encourage you to read Statistical Inference for Spatial Processes by Brian Ripley.\n",
+    "\n",
+    "For this example, we’re going to utilize a dataset of Dollar General retail store locations within Ohio. This data was sourced using the OpenStreetMap API and is available under the Open Data License."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ba2506b7",
@@ -173,7 +222,12 @@
    "id": "a7373570",
    "metadata": {},
    "source": [
-    "### Ripley's G"
+    "### Ripley's G\n",
+    "\n",
+    "Through studying the map, we begin to see that there are many stores located around cities such as Dayton, Columbus, Cleveland, and Akron. To see whether these stores are clustered together in a spatially significant way, you can begin leveraging some of Ripley’s statistics.\n",
+    "We’ll start with Ripley’s G, which is a cumulative function describing the distribution of distances between nearest neighbor points. By comparing the cumulative function from Ripley’s G with a point dataset that is generated from a spatially random process, you can determine whether the point data you’re studying expresses a spatial pattern. In addition to Ripley’s G, Ripley’s F and Ripley’s J also leveraged cumulative distribution functions:\n",
+    "\n",
+    "1.\tCoding Ripley’s G in Python is relatively simple. All you need to do is call the g_test() function from pointpats, which we imported earlier:\n"
    ]
   },
   {
@@ -211,7 +265,8 @@
    "id": "3928854a",
    "metadata": {},
    "source": [
-    "### Ripley's K"
+    "### Ripley's K\n",
+    "Next, we’ll test the store locations dataset with the Ripley’s K function. In contrast to the Ripley’s G function, Ripley’s K considers all distances and not just those of the closest neighbor. Ripley’s L is another such function that considers all distances."
    ]
   },
   {
@@ -249,9 +304,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "397c6e2f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
