--- a/Week 2/Wednesday/Spatial Autocorrelation.ipynb
+++ b/Week 2/Wednesday/Spatial Autocorrelation.ipynb
@@ -107,7 +107,7 @@
    "outputs": [],
    "source": [
     "### Reading in the data\n",
-    "data_path = r'YOUR FILE PATH'\n",
+    "data_path = \"/etc/skel/data-pt1/\"\n",
     "\n",
     "# REMINDER - The listings data must be downloaded from Inside Airbnb\n",
     "listings = pd.read_csv(data_path + 'NY Airbnb June 2020\\listings.csv.gz', compression='gzip', low_memory=False)\n",
@@ -196,11 +196,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "id": "5cb0aece",
    "metadata": {},
    "source": [
-    "#### 2.1.1 Moran's I"
+    "#### 2.1.1 Moran's I\n",
+    "\n",
+    "![Spatial autocorrelation ](./image/mi.jpg)"
    ]
   },
   {
@@ -545,7 +556,14 @@
    "id": "14aa370e",
    "metadata": {},
    "source": [
-    "### 2.2 Local Spatial Autocorrelation"
+    "### 2.2 Local Spatial Autocorrelation\n",
+    "Local Indicators of Spatial Associations (LISAs) are spatial statistics that are derived from global spatial statistics and calculate local cluster patterns, also known as spatial outliers. These spatial outliers are unlikely to appear if the assumption of spatial randomness was true.\n",
+    "LISAs must conform to two requirements:\n",
+    "\n",
+    "•\t LISAs for each and every observation represent the degree of spatial clustering of similar values in that observation’s neighborhood\n",
+    "•\tThe sum of LISAs across an observation must be proportional to the associated global indicator from which the LISAs are derived\n",
+    "\n",
+    "One well-known LISA is Local Moran’s I, which describes localized spatial clustering in terms of high and low values. Local Moran’s I can be calculated using the Moran_Local() function.\n"
    ]
   },
   {
@@ -582,6 +600,15 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "From the distribution, you can see that there is a massive spike in the data around 0 with a long right tail. This is mainly due to the presence of a large number of observations with positive spatial autocorrelation, which is in line with what we discovered from the global measures."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -734,12 +761,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "The choropleth map with quadrant labels for significant observations"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "919ad4d1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
